--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,14 @@ dependencies {
     compile 'com.just.agentweb:agentweb:2.0.1'
     compile 'com.wang.avi:library:2.1.3'
 
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    compile 'com.github.razerdp:BasePopup:latest.release'
+
+    compile 'com.orhanobut:logger:2.1.1'
+
+    compile 'cn.qqtheme.framework:AndroidPicker:latest.integration'
+
+    compile 'ren.qinc.numberbutton:numberbutton:0.0.1'
 }
