--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,8 @@
         <activity android:name=".ui.ari.AriActivity"/>
         <activity android:name=".ui.postCode.PostCodeActivitry"/>
 
+        <activity android:name=".ui.share.ShareDemoActivity"/>
+
     </application>
 
 </manifest>
